# egrfc-stats

./: .gitignore  AGENTS.md  Analysis.ipynb  CLIENT_SIDE_ANALYSIS.md  CNAME  CONTAINER_SIZING_SOLUTIONS.md  FRONTEND_HOUSE_STYLE_AND_MOBILE_PLAN.md  FRONTEND_HOUSE_STYLE_V2_BLUEPRINT.md  PITCHERO_EXTRACTION_SUMMARY.md  PITCHERO_SCORERS_EXTRACTION_REPORT.md  PITCHERO_SCORERS_INVESTIGATION.md  README.md  charts.py  data.md  data_prep.py  database.html  features.md  googleappsscript.js  index.html  league-tables.html  lineout-performance.html  lineout-template.json  lineout_success_by_zone.html  match-data.html  match-info.html  opposition-profile.html  performance-stats.html  photos.py  player-full-profile.html  player-gallery.html  player-info.html  player-profile.html  player-profiles.html  player-stats.html  players.html  players.py  pyproject.toml  rugby_league_sim.html  scrum-performance.html  season-summary.html  (+11 more)
.github/: copilot-instructions.md
Archive/: SLM.ipynb  photos.py  photos2.py  players.html  positions.html  results_2023-2024.html  season_summaries.json  styles.css  table_1s_2022-2023.html  table_2s_2024-2025.html  update.py  video_analysis.html  women_squad_analysis.html  women_squad_analysis_2024-2025.html
Charts/: 1s-lineouts.html  2s-lineouts.html  appearances.html  captains.html  cards.html  continuity.html  game-stats.html  lineouts.html  player_appearances.html  player_squad_pie.html  points.html  positions.html  results.html  set-piece.html  team-sheets.html  video_analysis.html
css/: base.css  charts.css  components.css  filters.css  ux-lab.css  (+4 more)
(+1159 files in other folders)
